# salesforce-to-motherduck

./: .gitignore  README.md  initialise_motherduck_table.py  pyproject.toml  query_helpers.py  refresh_table_full_load.py  refresh_table_incremental_load.py  update_schema_add_column.py  update_schema_remove_column.py  update_schema_remove_columns.py
.github/workflows/: heartbeat.yml  sf_md_refresh.yml
