[project]
name = "salesforce-extraction-project-v2"
version = "0.1.0"
description = "ETL pipeline for core Salesforce data to MotherDuck"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.4.1",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "simple-salesforce>=1.12.9",
    "typing>=3.10.0.0",
]
